# ninja_dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_COMPLIANCE_ALERT_WORKFLOW.md  AGENT_COMPLIANCE_MIGRATION_REVIEW.md  AGENT_COMPLIANCE_OPERATOR_UI.md  AGENT_COMPLIANCE_PROPOSAL.md  AGENT_COMPLIANCE_REBUILD_BLUEPRINT.md  AGENT_COMPLIANCE_V2_BLUEPRINT.md  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DASHBOARD_PLACEMENT_MAP.md  Dockerfile  HANDY_COMMANDS.md  PORTS.md  PROJECT.md  README.md  REQUIREMENTS.md  SESSIONS.md  TODO.md  TROUBLESHOOTING.md  docker-compose.yml  ingest.Dockerfile  operations.Dockerfile  postgres.Dockerfile  requirements.txt
operations/: AGENTS.md  BLUEPRINT.md  BUILD_BLUEPRINT.md  CLAUDE.md  DESIGN.md  HANDY_COMMANDS.md  README.md  SESSIONS.md  TODO.md  entrypoint.sh  manage.py  pyproject.toml
operations/.claude/: settings.local.json
operations/.work/: backlog.md  plan.md
operations/apps/core/: admin.py  apps.py  client_workspace.py  context_processors.py  csv_export.py  decorators.py  device_status.py  forms.py  middleware.py  models.py  views.py
operations/config/: asgi.py  urls.py  wsgi.py
operations/docs/: architecture.md  current-state.md  legacy-scripts-parity-audit.md  metabase-parity-audit-full.md  metabase-parity-audit.md  nothing-hidden-audit.md  operations.md  requirements.md
operations/sql/: bootstrap-roles.sql
operations/templates/: _admin_tabs.html  _badges.html  _csv_download.html  _freshness.html  _pagination.html  _tiles.html  base.html  classifier_config.html  client_candidate_detail.html  client_candidates_queue.html  client_policy_form.html  client_requirements_config.html  coverage.html  device_detail.html  device_merge.html  device_status_config.html  devices_page.html  findings_admin_health.html  findings_queue.html  home.html  identity_review.html  merge_candidates_queue.html  notification_rules.html  notification_suppressions.html  operations_admin_overview.html  org_devices.html  org_index.html  org_policies.html  org_software.html  org_software_devices.html  patch_activity.html  patch_evidence.html  patch_trends.html  patching_queue.html  requirement_profiles.html  search_results.html  software_decisions.html  software_page.html  sources.html
(+265 files in other folders)
