[project]
name = "operations"
version = "0.1.0"
description = "AMRose Operations — write-side companion to Metabase for the ninja-dashboard stack."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "drf-spectacular>=0.27,<0.29",
    "psycopg[binary,pool]>=3.2,<3.3",
    "django-htmx>=1.19,<1.24",
    "whitenoise>=6.7,<6.10",
    "gunicorn>=23.0,<24.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<0.9",
    "mypy>=1.11,<1.14",
    "django-stubs[compatible-mypy]>=5.1,<5.2",
    "djangorestframework-stubs[compatible-mypy]>=3.15,<3.16",
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=5.0,<7.0",
    "testcontainers[postgres]>=4.8,<5.0",
    "playwright>=1.47,<2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations", "**/migrations/**"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "DJ",               # django
    "PL",               # pylint (selected)
    "RUF",              # ruff-specific
]
ignore = [
    "E501",  # line length — enforced by formatter
    "PLR0913",  # too many arguments — Django views/serializers
]

[tool.ruff.lint.per-file-ignores]
"**/settings/*" = ["F405", "F403"]
"**/tests/**" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["migrations/"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: tests that require Postgres testcontainer",
    "browser: Playwright browser tests",
]

[tool.coverage.run]
source = ["config", "apps"]
omit = ["*/migrations/*", "*/tests/*"]
